--- a/ai_cli/data/default_config.json
+++ b/ai_cli/data/default_config.json
@@ -1,8 +1,8 @@
 {
   "openai": {
     "api_key": "your_openai_api_key_here",
-    "model": "gpt-3.5-turbo",
-    "max_tokens": 2000,
+    "model": "gpt-5-mini",
+    "max_completion_tokens": 2000,
     "temperature": 0.7
   },
   "prompts": {
