--- a/local/.ai_cli_config.json
+++ b/local/.ai_cli_config.json
@@ -1,8 +1,8 @@
 {
   "openai": {
     "api_key": "redacted_for_security",
-    "model": "gpt-3.5-turbo",
-    "max_tokens": 2000,
+    "model": "gpt-5-mini",
+    "max_completion_tokens": 2000,
     "temperature": 0.7
   },
   "prompts": {
