--- a/ai_cli/data/default_config.json
+++ b/ai_cli/data/default_config.json
@@ -2,8 +2,7 @@
   "openai": {
     "api_key": "your_openai_api_key_here",
     "model": "gpt-5-mini",
-    "max_completion_tokens": 2000,
-    "temperature": 0.7
+    "max_completion_tokens": 2000
   },
   "prompts": {
     "default": {
