--- a/local/.ai_cli_config.json
+++ b/local/.ai_cli_config.json
@@ -2,8 +2,7 @@
   "openai": {
     "api_key": "redacted_for_security",
     "model": "gpt-5-mini",
-    "max_completion_tokens": 2000,
-    "temperature": 0.7
+    "max_completion_tokens": 2000
   },
   "prompts": {
     "ib": {
